# notice

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
client/android/: Dockerfile  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
client/android/app/: build.gradle.kts  proguard-rules.pro
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/assets/: licenses.json
client/android/gradle/: libs.versions.toml
client/android/gradle/wrapper/: gradle-wrapper.properties
client/cli/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  notify_other.go  notify_windows.go
client/cli/scripts/: example.sh  start.bat  start.sh
client/gui/: .dockerignore  Dockerfile  Makefile  README.md  build.ps1  package.json
client/gui/src/: index.html  main.js  styles.css
client/gui/tauri/: Cargo.toml  tauri.conf.json
client/gui/tauri/icons/: icon.icns
client/gui/tauri/src/: config.rs  lib.rs  main.rs  message.rs  mqtt.rs
client/linux/: Makefile  README.md  go.mod  main.go
client/linux/scripts/: start.sh
client/openclaw/: README.md  index.ts  openclaw.plugin.json  package.json
server/: .dockerignore  Dockerfile  Makefile  README.md  config.yaml  go.mod  go.sum  main.go
server/broker/: broker.go
server/config/: config.go  config_test.go
server/handlers/: api.go  webhook.go
server/logger/: logger.go
server/ratelimit/: ratelimit.go
server/scripts/: start.bat  start.sh
server/store/: store.go  store_test.go
server/web/: index.html
server/webhook/: handler.go
(+44 files in other folders)
