[package]
name = "notice-gui"
version = "0.1.0"
description = "Notice Client"
authors = ["i2534"]
edition = "2021"
repository = "https://github.com/i2534/notice"

[lib]
name = "notice_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MQTT
rumqttc = { version = "0.25", default-features = false, features = [
    "websocket",
    "use-native-tls",
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Standalone project, not part of any workspace
[workspace]
